objects/Loan_Path_Admin__c.object
<CustomObject>
    <fields>
        <fullName>Closer__c</fullName>
        <label>Closer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Important_Fields__c</fullName>
        <label>Important Fields</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Loan_Process_Guide__c</fullName>
        <label>Loan Process Guide</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Loan_Stage__c</fullName>
        <label>Loan Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <label>Relationship Manager</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <label>Underwriter</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Loan Path Admin</label>
    <listViews>
        <fullName>Collection_Team_Loan_Path_Admin</fullName>
        <filterScope>Queue</filterScope>
        <label>Collection Team</label>
        <queue>Collection_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LoanPath - {0000}</displayFormat>
        <label>Loan Path Admin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Path Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>